@startuml
class OrbitGraphUI {
    + conHeight : float
    + Init() : void
}
class GraphOrbit {
    + <<readonly>> a : float
    + <<readonly>> b : float
    + <<readonly>> c : float
    + <<readonly>> e : float
    + GraphOrbit(conicSection:ConicSection, height:float)
    + GetR(ag:float) : float
    + GetPolarPos(ag:float) : Vector2
}
MonoBehaviour <|-- OrbitGraphUI
OrbitGraphUI --> "astralBody" AstralBody
OrbitGraphUI --> "angularVelocity" Text
OrbitGraphUI --> "distance" Text
OrbitGraphUI --> "area" Text
OrbitGraphUI --> "ellipseImage" Image
OrbitGraphUI --> "oriImage" Image
OrbitGraphUI --> "targetImage" Image
OrbitGraphUI --> "leftFociImage" Image
OrbitGraphUI --> "rightFociImage" Image
OrbitGraphUI --> "fillMask" RectTransform
OrbitGraphUI --> "fillImage" Image
OrbitGraphUI --> "orbit" ConicSection
OrbitGraphUI --> "angularMomentum" Vector3
OrbitGraphUI +-- GraphOrbit
@enduml
